Adjusted achievement width to fix small spacing bug

--- a/components/Achievement/achievement.scss
+++ b/components/Achievement/achievement.scss
@@ -3,7 +3,7 @@
 .achievement {
 	height: auto;
 	min-height: 80px;
-	width: calc(100% - 4px);
+	width: calc(100% - 6px);
 	max-width: 608px;
 	margin: 2px;
 	background: url(/static/images/achievements/bg_ach.png) no-repeat top left;
